added multi code and resources

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="">
-<title>
-	fisher's website
-</title>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>multi</title>
+  <title>fisher's website</title>
   <style>
     body {
       padding: 0;
@@ -19,7 +16,7 @@
 </head>
 
 <body>
-	<p>Hello Web!</p>
+	<p>homepage</p>
 </body>
 
 </html>
