--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       margin: 0;
     }
   </style>
-  <script src="../p5/p5.js"></script>
-  <script src="../p5/addons/p5.sound.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/lib/p5.js"></script>
+  <!-- <script src="../p5/addons/p5.sound.min.js"></script> -->
   <script src="multi.js"></script>
 </head>
 
 <body>
-	<p>homepage</p>
+	<p>home</p>
 </body>
 
 </html>
