--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
       margin: 0;
     }
   </style>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/lib/p5.js"></script>
-  <!-- <script src="../p5/addons/p5.sound.min.js"></script> -->
-  <script src="multi.js"></script>
+  <script src="p5/p5.js"></script>
+  <script src="p5/p5.sound.js"></script>
+  <script src="homepage.js"></script>
 </head>
 
 <body>
-	<p>home</p>
 </body>
 
 </html>
