--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       margin: 0;
     }
   </style>
-  <script src="p5/p5.js"></script>
-  <script src="p5/p5.sound.js"></script>
+  <script src="..p5/p5.js"></script>
+  <script src="..p5/p5.sound.js"></script>
   <script src="homepage.js"></script>
 </head>
 
