welcome fade button and basic profile with image spawner on click

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
       padding: 0;
       margin: 0;
+      background-color: black;
     }
   </style>
   <script src="p5/p5.js"></script>
